@@ -104,6 +104,7 @@ options:
       - copy-attachments-from
       - decrypt
       - deterministic-id
+      - disable-signatures
       - empty
       - encrypt
       - externalize-inline-images
@@ -319,6 +320,7 @@ json:
   decode-level:
   decrypt:
   deterministic-id:
+  disable-signatures:
   static-aes-iv:
   static-id:
   no-original-object-ids:
