@@ -221,9 +221,16 @@ present on the input file. This option overrides that behavior.
 .TP
 .B --remove-restrictions \-\- remove security restrictions from input file
 Remove restrictions associated with digitally signed PDF files.
-This may be combined with --decrypt to allow free editing of
-previously signed/encrypted files. This option invalidates the
-signature but leaves its visual appearance intact.
+This may be combined with --decrypt and --disable-signatures to
+allow free editing of previously signed/encrypted files. This
+option invalidates the signature but leaves its visual
+appearance intact. See also --disable-signatures.
+.TP
+.B --disable-signatures \-\- disable digital signature fields
+Remove all digital signature fields from a file. The appearance
+of the digital signature, if any, will remain on the page, but
+it will no longer be a signature field. See also
+--remove-restrictions.
 .TP
 .B --copy-encryption \-\- copy another file's encryption details
 --copy-encryption=file
