@@ -1,3 +1,10 @@
+2023-12-23  Jay Berkenbilt  <ejb@ql.org>
+
+	* Add QPDFAcroFormDocumentHelper::disableDigitalSignatures and the
+	--disable-signatures command-line argument. This disables any
+	digital signature fields, leaving their visual representations
+	intact.
+
 2023-12-22  Jay Berkenbilt  <ejb@ql.org>
 
 	* Generate a more complete qpdf "man page" from the same source as
